tests/compile_fail/unknown_struct_attribute.rs
use conflaguration::Settings;

#[derive(Settings)]
#[settings(bogus = "nope")]
struct BadConfig {
    field: u16,
}

fn main() {}
