tests/compile_fail/unknown_struct_attribute.stderr
error: unknown settings attribute
 --> tests/compile_fail/unknown_struct_attribute.rs:4:12
  |
4 | #[settings(bogus = "nope")]
  |            ^^^^^
